started on second data cleaning file

--- a/assets/files/python_pandas_cleaning_data1.ipynb
+++ b/assets/files/python_pandas_cleaning_data1.ipynb
@@ -20,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quick Note: To run the code cells below either click `Run` above or keyboard shortcut, `shift enter`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1256,7 @@
    "outputs": [],
    "source": [
     "# Next notebook we will look at converting empty spaces into valid data points and\n",
-    "# verifying we got rid of all spaces. Cleaning data is 90% of work!"
+    "# verifying we got rid of all spaces. Cleaning data is 90% of data analysis!"
    ]
   },
   {
