first post updated, second in progress

--- a/assets/files/python_pandas_cleaning_data1.ipynb
+++ b/assets/files/python_pandas_cleaning_data1.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quick Note: To run the code cells below either click `Run` above or see below for few useful shortcuts.\n",
+    "To run the code cells below either click `Run` in the menu above or `Help` has a list of all the `Keyboard Shortcuts`:\n",
     "* `Shift + Enter` run the current cell, select below\n",
     "* `Ctrl + Ente`r run selected cells\n",
     "* `Alt + Enter` run the current cell, insert below\n",
