updated gem file

--- a/assets/files/fuzzwuzzy.ipynb
+++ b/assets/files/fuzzwuzzy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vendors=pd.read_excel('~/Downloads/Lab_3_1_Fuzzy.xlsx',sheet_name='Vendors')"
+    "df_vendors=pd.read_excel('~/Downloads/2020-06-16 data export 2/ACC 455 001 SQ 2020/Homework 3/Fuzzy-Tables-1.xlsm',sheet_name='Vendors')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4          3526796551  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_employees=pd.read_excel('~/Downloads/Lab_3_1_Fuzzy.xlsx',sheet_name='Employees')"
+    "df_employees=pd.read_excel('~/Downloads/2020-06-16 data export 2/ACC 455 001 SQ 2020/Homework 3/Fuzzy-Tables-1.xlsm',sheet_name='Employees')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +202,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>EmployeeStreetAddress</th>\n",
        "      <th>EmployeeID</th>\n",
        "      <th>EmployeeFirstName</th>\n",
        "      <th>EmployeeLastName</th>\n",
        "      <th>EmployeeGender</th>\n",
        "      <th>EmployeeHireDate</th>\n",
-       "      <th>EmployeeStreetAddress</th>\n",
+       "      <th>EmployeeStreetAddress2</th>\n",
        "      <th>EmployeeCity</th>\n",
        "      <th>EmployeeState</th>\n",
        "      <th>EmployeeZip</th>\n",
@@ -217,103 +218,338 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>Harry</td>\n",
-       "      <td>Haas</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2010-06-28</td>\n",
-       "      <td>49 Hamilton St.</td>\n",
-       "      <td>Christiansburg</td>\n",
-       "      <td>VA</td>\n",
-       "      <td>24073</td>\n",
-       "      <td>6092506128</td>\n",
+       "      <td>306A Oakwood Lane</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>Ana</td>\n",
+       "      <td>Terrell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2019-01-15</td>\n",
+       "      <td>306A Oakwood Lane</td>\n",
+       "      <td>Algonquin</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60102</td>\n",
+       "      <td>3524937211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Nadia</td>\n",
-       "      <td>Haley</td>\n",
+       "      <td>93 Wakehurst Lane</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>Tabitha</td>\n",
+       "      <td>Dennis</td>\n",
        "      <td>F</td>\n",
-       "      <td>2010-08-07</td>\n",
-       "      <td>851 Glenholme Road</td>\n",
-       "      <td>Paducah</td>\n",
-       "      <td>KY</td>\n",
-       "      <td>42001</td>\n",
-       "      <td>8145529211</td>\n",
+       "      <td>2011-06-27</td>\n",
+       "      <td>93 Wakehurst Lane</td>\n",
+       "      <td>Alliance</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>44601</td>\n",
+       "      <td>9066082859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1002</td>\n",
-       "      <td>Erik</td>\n",
-       "      <td>Hensley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2010-08-09</td>\n",
-       "      <td>169 Carriage Drive</td>\n",
-       "      <td>Knoxville</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>37918</td>\n",
-       "      <td>8651758266</td>\n",
+       "      <td>7489 Bayport St.</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>Caroline</td>\n",
+       "      <td>Davis</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2013-03-22</td>\n",
+       "      <td>7489 Bayport St.</td>\n",
+       "      <td>Ames</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>50010</td>\n",
+       "      <td>3257842718</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>Annabel</td>\n",
-       "      <td>Morris</td>\n",
+       "      <td>9173 West Squaw Creek Drive</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>Camille</td>\n",
+       "      <td>Stokes</td>\n",
        "      <td>F</td>\n",
-       "      <td>2010-09-04</td>\n",
-       "      <td>7393 E. Garden Ave.</td>\n",
-       "      <td>Worcester</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>1604</td>\n",
-       "      <td>2343264246</td>\n",
+       "      <td>2017-02-09</td>\n",
+       "      <td>9173 West Squaw Creek Drive</td>\n",
+       "      <td>Arvada</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>80003</td>\n",
+       "      <td>2064592209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1004</td>\n",
-       "      <td>Valentina</td>\n",
-       "      <td>Grimes</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2010-11-09</td>\n",
-       "      <td>723 Del Monte Street</td>\n",
-       "      <td>Easton</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>18042</td>\n",
-       "      <td>2409677629</td>\n",
+       "      <td>9444 Manhattan Dr.</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>Semaj</td>\n",
+       "      <td>Hawkins</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2017-12-13</td>\n",
+       "      <td>9444 Manhattan Dr.</td>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11102</td>\n",
+       "      <td>6097459461</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   EmployeeID EmployeeFirstName EmployeeLastName EmployeeGender  \\\n",
-       "0        1000             Harry             Haas              M   \n",
-       "1        1001             Nadia            Haley              F   \n",
-       "2        1002              Erik          Hensley              M   \n",
-       "3        1003           Annabel           Morris              F   \n",
-       "4        1004         Valentina           Grimes              F   \n",
+       "          EmployeeStreetAddress  EmployeeID EmployeeFirstName  \\\n",
+       "0            306A Oakwood Lane         1049               Ana   \n",
+       "1            93 Wakehurst Lane         1009           Tabitha   \n",
+       "2             7489 Bayport St.         1022          Caroline   \n",
+       "3  9173 West Squaw Creek Drive         1049           Camille   \n",
+       "4           9444 Manhattan Dr.         1049             Semaj   \n",
        "\n",
-       "  EmployeeHireDate  EmployeeStreetAddress    EmployeeCity EmployeeState  \\\n",
-       "0       2010-06-28       49 Hamilton St.   Christiansburg            VA   \n",
-       "1       2010-08-07    851 Glenholme Road          Paducah            KY   \n",
-       "2       2010-08-09    169 Carriage Drive        Knoxville            TN   \n",
-       "3       2010-09-04   7393 E. Garden Ave.        Worcester            MA   \n",
-       "4       2010-11-09  723 Del Monte Street           Easton            PA   \n",
+       "  EmployeeLastName EmployeeGender EmployeeHireDate  \\\n",
+       "0          Terrell              F       2019-01-15   \n",
+       "1           Dennis              F       2011-06-27   \n",
+       "2            Davis              F       2013-03-22   \n",
+       "3           Stokes              F       2017-02-09   \n",
+       "4          Hawkins              M       2017-12-13   \n",
        "\n",
-       "   EmployeeZip  EmployeePhone  \n",
-       "0        24073     6092506128  \n",
-       "1        42001     8145529211  \n",
-       "2        37918     8651758266  \n",
-       "3         1604     2343264246  \n",
-       "4        18042     2409677629  "
+       "         EmployeeStreetAddress2 EmployeeCity EmployeeState  EmployeeZip  \\\n",
+       "0            306A Oakwood Lane     Algonquin            IL        60102   \n",
+       "1            93 Wakehurst Lane      Alliance            OH        44601   \n",
+       "2             7489 Bayport St.          Ames            IA        50010   \n",
+       "3  9173 West Squaw Creek Drive        Arvada            CO        80003   \n",
+       "4           9444 Manhattan Dr.       Astoria            NY        11102   \n",
+       "\n",
+       "   EmployeePhone  \n",
+       "0     3524937211  \n",
+       "1     9066082859  \n",
+       "2     3257842718  \n",
+       "3     2064592209  \n",
+       "4     6097459461  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_employees.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['VendorID', 'VendorName', 'VendorType', 'VendorSince', 'VendorContact',\n",
+       "       'VendorBillingAddress', 'VendorBillingCity', 'VendorBillingState',\n",
+       "       'VendorBillingZip', 'VendorBillingPhone'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_vendors.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['EmployeeStreetAddress', 'EmployeeID', 'EmployeeFirstName',\n",
+       "       'EmployeeLastName', 'EmployeeGender', 'EmployeeHireDate',\n",
+       "       'EmployeeStreetAddress2', 'EmployeeCity', 'EmployeeState',\n",
+       "       'EmployeeZip', 'EmployeePhone'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_employees.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_directory=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "260 Airport Street \n",
+      "182 Bayberry St. \n",
+      "375 Theatre Rd. \n",
+      "48 Fremont Dr. \n",
+      "34 Mayfield St. \n",
+      "7 West Linda Avenue \n",
+      "98 North Hanover St. \n",
+      "421 Lake Forest St. \n",
+      "434 East Smith Store Dr. \n",
+      "7015 Arch Street \n",
+      "9123 North Campfire St. \n",
+      "7978 Pennsylvania Ave. \n",
+      "677 Johnson Lane \n",
+      "52 Golden Star Dr. \n",
+      "8226 Shirley Street \n",
+      "56 Trout Lane Unit B\n",
+      "878 South Franklin St. \n",
+      "976 Linda Drive \n",
+      "780 N. Valley View Ave. \n",
+      "856 North Homewood Road \n",
+      "73 Olive Road \n",
+      "40 Chapel Lane \n",
+      "9 East Glen Creek Street \n",
+      "422 Woodland Ave. \n",
+      "8685 University Street \n",
+      "702 Harrison Ave. \n",
+      "7826 Victoria Street \n",
+      "673 Longbranch St. \n",
+      "74 Glenlake Drive \n",
+      "55 North Riverview Street \n",
+      "8555 Gulf Lane \n",
+      "665 West Gartner Dr. \n",
+      "60 Anderson St. \n",
+      "8481 Birch Hill Avenue \n",
+      "39 Joy Ridge Road \n",
+      "4 Deerfield St. \n",
+      "60 Lake Court \n",
+      "18 S. Thompson Street \n",
+      "8325 Acacia Street \n",
+      "370 S. Henry Smith Court \n",
+      "724 S. Homestead Ave. \n",
+      "7124 San Carlos Lane \n",
+      "7823 Bedford Road \n",
+      "9244 Birchwood Ave. \n",
+      "87 New St. \n",
+      "45 Beach Street \n",
+      "737 Bear Hill Ave. \n",
+      "972 Lookout Road \n",
+      "713 Second Dr. \n",
+      "9854 Pawnee Lane \n",
+      "194 North Pine St. \n",
+      "94 Bowman Road \n",
+      "7183 West University Street \n",
+      "67 Liberty Lane \n",
+      "764 Elm Road \n",
+      "354 Winding Way Ave. \n",
+      "75 Branch Ave. \n",
+      "267 W. Acacia Street \n",
+      "226 Beech St. \n",
+      "570 Bayberry St. \n",
+      "239 N. Gonzales Street \n",
+      "15 Orange St. \n",
+      "325 Meadowbrook Ave. \n",
+      "338 Fairground Street \n",
+      "747 Warren St. \n",
+      "693 Sutor Ave. \n",
+      "11 Courtland Street \n",
+      "9178 Woodside Street \n",
+      "71 Fulton Ave. \n",
+      "9834 Temple Avenue \n",
+      "255 Longbranch Street \n",
+      "8891 Bay Meadows Lane \n",
+      "9485 Evergreen Court \n",
+      "8180 Maiden Ave. \n",
+      "740 South Jennings St. \n",
+      "621 Berkshire Street \n",
+      "306 10th St. \n",
+      "4 Bedford Dr. \n",
+      "7039 Oakwood Drive \n",
+      "599 North Airport Court \n",
+      "9911 Shore Ave. \n",
+      "7720 Mechanic St. \n",
+      "253 High Noon Street \n",
+      "8933 Euclid St. \n",
+      "9332 Bradford Ave. \n",
+      "8 Olive Dr. \n",
+      "538 Saxton Dr. \n",
+      "835 Nicolls St. \n",
+      "900 Brewery St. \n",
+      "8960 S. Orange St. \n",
+      "542 South Franklin Street \n",
+      "192 Glenridge Drive \n",
+      "8 Edgefield Street \n",
+      "9237 Smith Store Road \n",
+      "872 Lawrence Ave. \n",
+      "9735 Rose St. \n",
+      "57 East Lookout St. \n",
+      "42 Sunbeam St. \n",
+      "98 Walt Whitman Street \n",
+      "730 Livingston St. \n",
+      "63 West Lookout Ave. \n",
+      "15 Lakeview Ave. \n",
+      "7066 Valley Farms Ave. \n",
+      "611 Creekside Drive \n",
+      "8775 Bohemia Ave. \n",
+      "13 Euclid Court \n",
+      "248 Homestead St. \n",
+      "801 Golf St. \n",
+      "9396 Amerige St. \n",
+      "8581 E. Shirley St. \n",
+      "700 Trusel Lane \n",
+      "7727 Glenwood St. \n",
+      "8 Coffee Court \n",
+      "548 Richardson St. \n",
+      "7918 Ketch Harbour St. \n",
+      "913 Prospect Street \n",
+      "217 Snake Hill St. \n",
+      "853 Valley Farms Ave. \n",
+      "900 South Annadale St. \n",
+      "721 E. Grant Ave. \n",
+      "83 E. Devon Lane \n",
+      "82 E. Mill Pond Court \n",
+      "30 Valley View Ave. Suite 15\n",
+      "27 Crescent Street \n",
+      "746 Annadale St. \n",
+      "447 Riverview Ave. \n",
+      "74 Holly Ave. \n",
+      "8 Wilson Dr. \n",
+      "8029 Morris Street \n",
+      "68 Fieldstone Lane \n",
+      "1 W. Water Street \n",
+      "93 Atlantic St. \n",
+      "8167 E. Military Dr. \n",
+      "533 Sage Drive \n",
+      "8719 Lexington Ave. \n",
+      "739 Sunset St. \n",
+      "45 Marconi Rd.\n",
+      "16 Third St. \n",
+      "9678 N. Kingston Street \n",
+      "9807 Oak Dr. \n",
+      "45 North Marconi\n",
+      "7626 Aspen Rd. \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df_vendors['VendorBillingAddress']:\n",
+    "    for k in df_emplyees['']\n",
+    "    print(i)"
    ]
   },
   {
