fuzzy basic done

--- a/assets/files/fuzzwuzzy.ipynb
+++ b/assets/files/fuzzwuzzy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fuzzywuzzy as fw"
+    "from fuzzywuzzy import fuzz\n",
+    "from fuzzywuzzy import process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        "4          3526796551  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
        "4     6097459461  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,178 +379,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_directory=[]"
+    "scores=pd.DataFrame(columns=['Vendor', 'Vendor Address', 'Employee', 'Employee Address', 'Score'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['306A Oakwood Lane ', '93 Wakehurst Lane ']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ee_choices[:2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuzz.token_set_ratio(df_vendors['VendorBillingAddress'][1],df_employees['EmployeeStreetAddress'][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee_choices = df_employees['EmployeeStreetAddress'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('27 Arch St. ', 86), ('6 Beech St. ', 86)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process.extract(df_vendors['VendorBillingAddress'][1], ee_choices, limit=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'182 Bayberry St. '"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_vendors['VendorBillingAddress'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('27 Arch St. ', 86)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process.extractOne(df_vendors['VendorBillingAddress'][1], ee_choices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "260 Airport Street \n",
-      "182 Bayberry St. \n",
-      "375 Theatre Rd. \n",
-      "48 Fremont Dr. \n",
-      "34 Mayfield St. \n",
-      "7 West Linda Avenue \n",
-      "98 North Hanover St. \n",
-      "421 Lake Forest St. \n",
-      "434 East Smith Store Dr. \n",
-      "7015 Arch Street \n",
-      "9123 North Campfire St. \n",
-      "7978 Pennsylvania Ave. \n",
-      "677 Johnson Lane \n",
-      "52 Golden Star Dr. \n",
-      "8226 Shirley Street \n",
-      "56 Trout Lane Unit B\n",
-      "878 South Franklin St. \n",
-      "976 Linda Drive \n",
-      "780 N. Valley View Ave. \n",
-      "856 North Homewood Road \n",
-      "73 Olive Road \n",
-      "40 Chapel Lane \n",
-      "9 East Glen Creek Street \n",
-      "422 Woodland Ave. \n",
-      "8685 University Street \n",
-      "702 Harrison Ave. \n",
-      "7826 Victoria Street \n",
-      "673 Longbranch St. \n",
-      "74 Glenlake Drive \n",
-      "55 North Riverview Street \n",
-      "8555 Gulf Lane \n",
-      "665 West Gartner Dr. \n",
-      "60 Anderson St. \n",
-      "8481 Birch Hill Avenue \n",
-      "39 Joy Ridge Road \n",
-      "4 Deerfield St. \n",
-      "60 Lake Court \n",
-      "18 S. Thompson Street \n",
-      "8325 Acacia Street \n",
-      "370 S. Henry Smith Court \n",
-      "724 S. Homestead Ave. \n",
-      "7124 San Carlos Lane \n",
-      "7823 Bedford Road \n",
-      "9244 Birchwood Ave. \n",
-      "87 New St. \n",
-      "45 Beach Street \n",
-      "737 Bear Hill Ave. \n",
-      "972 Lookout Road \n",
-      "713 Second Dr. \n",
-      "9854 Pawnee Lane \n",
-      "194 North Pine St. \n",
-      "94 Bowman Road \n",
-      "7183 West University Street \n",
-      "67 Liberty Lane \n",
-      "764 Elm Road \n",
-      "354 Winding Way Ave. \n",
-      "75 Branch Ave. \n",
-      "267 W. Acacia Street \n",
-      "226 Beech St. \n",
-      "570 Bayberry St. \n",
-      "239 N. Gonzales Street \n",
-      "15 Orange St. \n",
-      "325 Meadowbrook Ave. \n",
-      "338 Fairground Street \n",
-      "747 Warren St. \n",
-      "693 Sutor Ave. \n",
-      "11 Courtland Street \n",
-      "9178 Woodside Street \n",
-      "71 Fulton Ave. \n",
-      "9834 Temple Avenue \n",
-      "255 Longbranch Street \n",
-      "8891 Bay Meadows Lane \n",
-      "9485 Evergreen Court \n",
-      "8180 Maiden Ave. \n",
-      "740 South Jennings St. \n",
-      "621 Berkshire Street \n",
-      "306 10th St. \n",
-      "4 Bedford Dr. \n",
-      "7039 Oakwood Drive \n",
-      "599 North Airport Court \n",
-      "9911 Shore Ave. \n",
-      "7720 Mechanic St. \n",
-      "253 High Noon Street \n",
-      "8933 Euclid St. \n",
-      "9332 Bradford Ave. \n",
-      "8 Olive Dr. \n",
-      "538 Saxton Dr. \n",
-      "835 Nicolls St. \n",
-      "900 Brewery St. \n",
-      "8960 S. Orange St. \n",
-      "542 South Franklin Street \n",
-      "192 Glenridge Drive \n",
-      "8 Edgefield Street \n",
-      "9237 Smith Store Road \n",
-      "872 Lawrence Ave. \n",
-      "9735 Rose St. \n",
-      "57 East Lookout St. \n",
-      "42 Sunbeam St. \n",
-      "98 Walt Whitman Street \n",
-      "730 Livingston St. \n",
-      "63 West Lookout Ave. \n",
-      "15 Lakeview Ave. \n",
-      "7066 Valley Farms Ave. \n",
-      "611 Creekside Drive \n",
-      "8775 Bohemia Ave. \n",
-      "13 Euclid Court \n",
-      "248 Homestead St. \n",
-      "801 Golf St. \n",
-      "9396 Amerige St. \n",
-      "8581 E. Shirley St. \n",
-      "700 Trusel Lane \n",
-      "7727 Glenwood St. \n",
-      "8 Coffee Court \n",
-      "548 Richardson St. \n",
-      "7918 Ketch Harbour St. \n",
-      "913 Prospect Street \n",
-      "217 Snake Hill St. \n",
-      "853 Valley Farms Ave. \n",
-      "900 South Annadale St. \n",
-      "721 E. Grant Ave. \n",
-      "83 E. Devon Lane \n",
-      "82 E. Mill Pond Court \n",
-      "30 Valley View Ave. Suite 15\n",
-      "27 Crescent Street \n",
-      "746 Annadale St. \n",
-      "447 Riverview Ave. \n",
-      "74 Holly Ave. \n",
-      "8 Wilson Dr. \n",
-      "8029 Morris Street \n",
-      "68 Fieldstone Lane \n",
-      "1 W. Water Street \n",
-      "93 Atlantic St. \n",
-      "8167 E. Military Dr. \n",
-      "533 Sage Drive \n",
-      "8719 Lexington Ave. \n",
-      "739 Sunset St. \n",
-      "45 Marconi Rd.\n",
-      "16 Third St. \n",
-      "9678 N. Kingston Street \n",
-      "9807 Oak Dr. \n",
-      "45 North Marconi\n",
-      "7626 Aspen Rd. \n"
+      "260 Airport Street  Watson 82 Airport Dr.  71\n",
+      "182 Bayberry St.  Maynard 27 Arch St.  86\n",
+      "375 Theatre Rd.  Duke 8748 W. Theatre Ave.  64\n",
+      "48 Fremont Dr.  Watson 82 Airport Dr.  62\n",
+      "34 Mayfield St.  Haas 49 Hamilton St.  57\n",
+      "7 West Linda Avenue  Hurst 987 Willow Avenue  61\n",
+      "98 North Hanover St.  Schultz 977 Shore St.  86\n",
+      "421 Lake Forest St.  Schultz 977 Shore St.  86\n",
+      "434 East Smith Store Dr.  Watson 82 Airport Dr.  86\n",
+      "7015 Arch Street  Mullen 823 S. Cobblestone Street  86\n",
+      "9123 North Campfire St.  Haas 49 Hamilton St.  86\n",
+      "7978 Pennsylvania Ave.  Mckay 6 Lincoln Ave.  86\n",
+      "677 Johnson Lane  Terrell 306A Oakwood Lane  55\n",
+      "52 Golden Star Dr.  Willis 384 Ryan Dr.  86\n",
+      "8226 Shirley Street  Logan 321 Hickory Street  70\n",
+      "56 Trout Lane Unit B Jefferson 56 Oakwood St.  86\n",
+      "878 South Franklin St.  Haas 49 Hamilton St.  86\n",
+      "976 Linda Drive  Stokes 9173 West Squaw Creek Drive  86\n",
+      "780 N. Valley View Ave.  Mckay 6 Lincoln Ave.  86\n",
+      "856 North Homewood Road  Cooke 4 Alton Road  86\n",
+      "73 Olive Road  Church 9989 S. Ridgeview Road  86\n",
+      "40 Chapel Lane  Best 840 Sheffield Lane  69\n",
+      "9 East Glen Creek Street  Best 9716 Vale Street  86\n",
+      "422 Woodland Ave.  Cox 45 3rd Ave.  86\n",
+      "8685 University Street  Hinton 6 Green Street  86\n",
+      "702 Harrison Ave.  Cox 45 3rd Ave.  86\n",
+      "7826 Victoria Street  Logan 321 Hickory Street  68\n",
+      "673 Longbranch St.  Barber 267 Golf St.  86\n",
+      "74 Glenlake Drive  Stokes 9173 West Squaw Creek Drive  86\n",
+      "55 North Riverview Street  Best 9716 Vale Street  86\n",
+      "8555 Gulf Lane  Choi 9684 Goldfield Lane  61\n",
+      "665 West Gartner Dr.  Willis 384 Ryan Dr.  86\n",
+      "60 Anderson St.  Benson 7022 N. Lantern St.  62\n",
+      "8481 Birch Hill Avenue  Vargas 8705 Birch Hill Rd.  67\n",
+      "39 Joy Ridge Road  Church 9989 S. Ridgeview Road  67\n",
+      "4 Deerfield St.  Bruce 904 Sheffield Ave.  58\n",
+      "60 Lake Court  Ferrell 7565 Lancaster Court  86\n",
+      "18 S. Thompson Street  Hinton 6 Green Street  86\n",
+      "8325 Acacia Street  Banks 7835 Marsh Street  69\n",
+      "370 S. Henry Smith Court  Johnston 7436 Court Drive  86\n",
+      "724 S. Homestead Ave.  Mckay 6 Lincoln Ave.  86\n",
+      "7124 San Carlos Lane  Weber 204 San Carlos Rd.  76\n",
+      "7823 Bedford Road  Macdonald 73 Front Road  67\n",
+      "9244 Birchwood Ave.  Cox 45 3rd Ave.  86\n",
+      "87 New St.  Davis 7489 Bayport St.  86\n",
+      "45 Beach Street  Cox 45 3rd Ave.  86\n",
+      "737 Bear Hill Ave.  Cox 45 3rd Ave.  86\n",
+      "972 Lookout Road  Macdonald 73 Front Road  62\n",
+      "713 Second Dr.  Melton 913 Court Drive  57\n",
+      "9854 Pawnee Lane  Best 840 Sheffield Lane  59\n",
+      "194 North Pine St.  Barber 267 Golf St.  86\n",
+      "94 Bowman Road  Church 9989 S. Ridgeview Road  86\n",
+      "7183 West University Street  Best 9716 Vale Street  86\n",
+      "67 Liberty Lane  Pitts 61 University Lane  73\n",
+      "764 Elm Road  Warren 8710 Gainsway Road  86\n",
+      "354 Winding Way Ave.  Cox 45 3rd Ave.  86\n",
+      "75 Branch Ave.  Maddox 8063 Spring Ave. Apt 66 86\n",
+      "267 W. Acacia Street  Barber 267 Golf St.  86\n",
+      "226 Beech St.  Wyatt 6 Beech St.  91\n",
+      "570 Bayberry St.  Maynard 27 Arch St.  86\n",
+      "239 N. Gonzales Street  Hinton 6 Green Street  86\n",
+      "15 Orange St.  Nielsen 9426 North Hall St.  86\n",
+      "325 Meadowbrook Ave.  Cox 45 3rd Ave.  86\n",
+      "338 Fairground Street  Hinton 6 Green Street  86\n",
+      "747 Warren St.  Santos 8312 W. Blackburn St.  86\n",
+      "693 Sutor Ave.  Maddox 8063 Spring Ave. Apt 66 86\n",
+      "11 Courtland Street  Mccoy 919 Orchard Street  70\n",
+      "9178 Woodside Street  Wilcox 9980 Hillside Street  70\n",
+      "71 Fulton Ave.  Maddox 8063 Spring Ave. Apt 66 86\n",
+      "9834 Temple Avenue  Washington 9342 Depot Avenue  74\n",
+      "255 Longbranch Street  Hinton 6 Green Street  86\n",
+      "8891 Bay Meadows Lane  Dennis 93 Wakehurst Lane  53\n",
+      "9485 Evergreen Court  Stone 934 Miller Court  61\n",
+      "8180 Maiden Ave.  Cox 45 3rd Ave.  86\n",
+      "740 South Jennings St.  Haas 49 Hamilton St.  86\n",
+      "621 Berkshire Street  Logan 321 Hickory Street  68\n",
+      "306 10th St.  Nielsen 9426 North Hall St.  86\n",
+      "4 Bedford Dr.  Ballard 66 Pennsylvania Dr.  86\n",
+      "7039 Oakwood Drive  Stokes 9173 West Squaw Creek Drive  86\n",
+      "599 North Airport Court  Watson 82 Airport Dr.  86\n",
+      "9911 Shore Ave.  Maddox 8063 Spring Ave. Apt 66 86\n",
+      "7720 Mechanic St.  Maynard 27 Arch St.  86\n",
+      "253 High Noon Street  Grimes 723 Del Monte Street  65\n",
+      "8933 Euclid St.  Lucas 789 Glenridge St.  60\n",
+      "9332 Bradford Ave.  Cox 45 3rd Ave.  86\n",
+      "8 Olive Dr.  Hawkins 9444 Manhattan Dr.  86\n",
+      "538 Saxton Dr.  Willis 384 Ryan Dr.  67\n",
+      "835 Nicolls St.  Berger 47 NE. Nichols St.  65\n",
+      "900 Brewery St.  Nunez 9976 Cemetery St.  60\n",
+      "8960 S. Orange St.  Barber 267 Golf St.  86\n",
+      "542 South Franklin Street  Best 9716 Vale Street  86\n",
+      "192 Glenridge Drive  Houston 7510 S. Glenridge Drive  84\n",
+      "8 Edgefield Street  Hinton 6 Green Street  69\n",
+      "9237 Smith Store Road  Cooke 4 Alton Road  86\n",
+      "872 Lawrence Ave.  Cox 45 3rd Ave.  86\n",
+      "9735 Rose St.  Nielsen 9426 North Hall St.  86\n",
+      "57 East Lookout St.  Schultz 977 Shore St.  86\n",
+      "42 Sunbeam St.  Santos 8312 W. Blackburn St.  86\n",
+      "98 Walt Whitman Street  Hinton 6 Green Street  86\n",
+      "730 Livingston St.  Barber 267 Golf St.  86\n",
+      "63 West Lookout Ave.  Cox 45 3rd Ave.  86\n",
+      "15 Lakeview Ave.  Cox 45 3rd Ave.  86\n",
+      "7066 Valley Farms Ave.  Mckay 6 Lincoln Ave.  86\n",
+      "611 Creekside Drive  Hensley 169 Carriage Drive  65\n",
+      "8775 Bohemia Ave.  Cox 45 3rd Ave.  86\n",
+      "13 Euclid Court  Conrad 377 N. High Ridge Court  86\n",
+      "248 Homestead St.  Maynard 27 Arch St.  86\n",
+      "801 Golf St.  Nielsen 9426 North Hall St.  86\n",
+      "9396 Amerige St.  Maynard 27 Arch St.  86\n",
+      "8581 E. Shirley St.  Schultz 977 Shore St.  86\n",
+      "700 Trusel Lane  Best 840 Sheffield Lane  61\n",
+      "7727 Glenwood St.  Maynard 27 Arch St.  86\n",
+      "8 Coffee Court  Conrad 377 N. High Ridge Court  86\n",
+      "548 Richardson St.  Barber 267 Golf St.  86\n",
+      "7918 Ketch Harbour St.  Haas 49 Hamilton St.  86\n",
+      "913 Prospect Street  Jackson 9 Jones Street  67\n",
+      "217 Snake Hill St.  Barber 267 Golf St.  86\n",
+      "853 Valley Farms Ave.  Mckay 6 Lincoln Ave.  86\n",
+      "900 South Annadale St.  Haas 49 Hamilton St.  86\n",
+      "721 E. Grant Ave.  Cox 45 3rd Ave.  86\n",
+      "83 E. Devon Lane  Morris 7393 E. Garden Ave.  65\n",
+      "82 E. Mill Pond Court  Watson 82 Airport Dr.  86\n",
+      "30 Valley View Ave. Suite 15 Mckay 6 Lincoln Ave.  86\n",
+      "27 Crescent Street  Maynard 27 Arch St.  86\n",
+      "746 Annadale St.  Maynard 27 Arch St.  86\n",
+      "447 Riverview Ave.  Cox 45 3rd Ave.  86\n",
+      "74 Holly Ave.  Maddox 8063 Spring Ave. Apt 66 86\n",
+      "8 Wilson Dr.  Hawkins 9444 Manhattan Dr.  86\n",
+      "8029 Morris Street  Jackson 9 Jones Street  69\n",
+      "68 Fieldstone Lane  Choi 9684 Goldfield Lane  70\n",
+      "1 W. Water Street  James 7074 SW. Wild Horse Street  86\n",
+      "93 Atlantic St.  Norman 749 N. Atlantic Drive  86\n",
+      "8167 E. Military Dr.  Willis 384 Ryan Dr.  86\n",
+      "533 Sage Drive  Stokes 9173 West Squaw Creek Drive  86\n",
+      "8719 Lexington Ave.  Cox 45 3rd Ave.  86\n",
+      "739 Sunset St.  Santos 8312 W. Blackburn St.  86\n",
+      "45 Marconi Rd. Fuentes 45 N. Marconi Road  84\n",
+      "16 Third St.  Nielsen 9426 North Hall St.  86\n",
+      "9678 N. Kingston Street  Hinton 6 Green Street  86\n",
+      "9807 Oak Dr.  Hawkins 9444 Manhattan Dr.  86\n",
+      "45 North Marconi Cox 45 3rd Ave.  86\n",
+      "7626 Aspen Rd.  Allison 762 Aspen Road 89\n"
      ]
     }
    ],
    "source": [
-    "for i in df_vendors['VendorBillingAddress']:\n",
-    "    for k in df_emplyees['']\n",
-    "    print(i)"
+    "for i in range(len(df_vendors['VendorBillingAddress'])):\n",
+    "\n",
+    "    score = process.extractOne(df_vendors['VendorBillingAddress'][i], ee_choices)\n",
+    "    ee_name = df_employees['EmployeeLastName'][ee_choices.index(score[0])]\n",
+    "    print(df_vendors['VendorBillingAddress'][i], ee_name,score[0], score[1])\n",
+    "#     scores.append(df_vendors['VendorName'][i],df_vendors['VendorBillingAddress'][i],score[0], score[1])\n",
+    "    "
    ]
   },
   {
